# cli-friend

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
scripts/: build-stt.sh  generate-icon.cjs
src/: cli-data.js  index.html  main.js  search.js  styles.css  vim-data.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
stt/: Info.plist  vh-stt.swift
tests/: search.test.mjs
